--- a/colibre/description.html
+++ b/colibre/description.html
@@ -231,7 +231,7 @@
     </tr>
      <tr>
         <td>Minimum time-step</td>
-        <td>{{ data.metadata.parameters | get_if_present_float("minimum_timestep_yr", "yr") }}</td>
+        <td>{{ data.metadata.parameters | get_if_present_float("COLIBREAGN:minimum_timestep_yr", "yr") }}</td>
     </tr>
     <tr>
         <td>Maximal Reposition Mass</td>
