--- a/eagle-xl/description.html
+++ b/eagle-xl/description.html
@@ -28,8 +28,8 @@
 <h4>Gravitational Softening</h4>
 <table>
     <tr>
-        <th colspan=2>Baryons [kpc]</th>
-        <th colspan=2>Dark Matter [kpc]</th>
+        <th colspan=2>Baryons</th>
+        <th colspan=2>Dark Matter</th>
     </tr>
     <tr>
         <th>Max Physical</th>
