--- a/colibre/description.html
+++ b/colibre/description.html
@@ -229,8 +229,8 @@
         <td>Minimal Gas Mass For Nibbling</td>
         <td>{{ data.metadata.parameters | get_if_present_float("COLIBREAGN:min_gas_mass_for_nibbling", "Msun") }}</td>
     </tr>
-     <tr>
-        <td>Minimum time-step</td>
+    <tr>
+        <td>Minimum BH time-step</td>
         <td>{{ data.metadata.parameters | get_if_present_float("COLIBREAGN:minimum_timestep_yr", "yr") }}</td>
     </tr>
     <tr>
