A number of updates -- add phase plot colour-coded by dust mass fraction -- add dust mass function plot with adaptive binning -- show two more BN98 plots on the webpage -- fix the median in SNII density plot -- black formatting

--- a/colibre/description.html
+++ b/colibre/description.html
@@ -69,7 +69,7 @@
     </tr>
     <tr>
         <td>Immediate SF \(n_{\rm H, max}\)</td>
-        <td>{{ data.metadata.parameters | get_if_present_float("COLIBREStarFormation:threshold_max_density_H_p_cm3") }} cm\(^{-3}\)</td>
+        <td>{{ data.metadata.parameters | get_if_present_float("COLIBREStarFormation:density_direct_H_p_cm3") }} cm\(^{-3}\)</td>
     </tr>
 </table>
 
