Use initial mass table in description

--- a/bahamas/description.html
+++ b/bahamas/description.html
@@ -3,8 +3,9 @@
 <h4>Basic</h4>
 <ul>
     <li>Box-size: {{ data.metadata.boxsize[0] | format_number }}</li>
-    <li>Dark matter particle mass: {{ data.dark_matter.masses[0].to("Solar_Mass") | format_number }}</li>
-    <li>Gas particle mass: {{ data.gas.masses.min().to("Solar_Mass") | format_number }}</li>
+    <li>Dark matter particle mass:
+        {{ data.metadata.initial_mass_table.dark_matter.to("Solar_Mass") | format_number }}</li>
+    <li>Gas particle mass: {{ data.metadata.initial_mass_table.gas.to("Solar_Mass") | format_number }}</li>
     <li>Snapshot \(z={{ "%2.2f" | format(data.metadata.z)}}\), \(a={{ "%2.2f" | format(data.metadata.a)}}\)</li>
 </ul>
 
@@ -38,10 +39,14 @@
         <th>Comoving</th>
     </tr>
     <tr>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_baryon_softening", data.units.length, "kpc") }}</td>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_baryon_softening", data.units.length, "kpc") }}</td>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_DM_softening", data.units.length, "kpc") }}</td>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_DM_softening", data.units.length, "kpc") }}</td>
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_baryon_softening", data.units.length, "kpc") }}
+        </td>
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_baryon_softening", data.units.length, "kpc") }}
+        </td>
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_DM_softening", data.units.length, "kpc") }}
+        </td>
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_DM_softening", data.units.length, "kpc") }}
+        </td>
     </tr>
 </table>
 
@@ -57,11 +62,13 @@
     </tr>
     <tr>
         <td>Temperature Ceiling</td>
-        <td>{{ data.metadata.parameters | get_if_present_float("COLIBREStarFormation:temperature_threshold_K", "K") }}</td>
+        <td>{{ data.metadata.parameters | get_if_present_float("COLIBREStarFormation:temperature_threshold_K", "K") }}
+        </td>
     </tr>
     <tr>
         <td>Threshold SF \(n_{\rm H, max}\)</td>
-        <td>{{ data.metadata.parameters | get_if_present_float("COLIBREStarFormation:subgrid_density_threshold_H_p_CM3") }} cm\(^{-3}\)</td>
+        <td>{{ data.metadata.parameters | get_if_present_float("COLIBREStarFormation:subgrid_density_threshold_H_p_CM3") }}
+            cm\(^{-3}\)</td>
     </tr>
 </table>
 
@@ -113,8 +120,10 @@
         <th>Slope</th>
     </tr>
     <tr>
-        <td>{{ (data.metadata.parameters["COLIBREEntropyFloor:Jeans_density_norm_H_p_cm3"] | float) | format_number }}</td>
-        <td>{{ (data.metadata.parameters["COLIBREEntropyFloor:Jeans_temperature_norm_K"] | float) | format_number }}</td>
+        <td>{{ (data.metadata.parameters["COLIBREEntropyFloor:Jeans_density_norm_H_p_cm3"] | float) | format_number }}
+        </td>
+        <td>{{ (data.metadata.parameters["COLIBREEntropyFloor:Jeans_temperature_norm_K"] | float) | format_number }}
+        </td>
         <td>{{ (data.metadata.parameters["COLIBREEntropyFloor:Jeans_gamma_effective"] | float) | format_number }}</td>
     </tr>
 </table>
@@ -220,4 +229,3 @@
     <li>Compiler info: {{ data.metadata.compiler_info }}</li>
     <li>Hydrodynamics: {{ data.metadata.hydro_info }}</li>
 </ul>
-
