--- a/eagle-xl/description.html
+++ b/eagle-xl/description.html
@@ -3,8 +3,9 @@
 <h4>Basic</h4>
 <ul>
     <li>Box-size: {{ data.metadata.boxsize[0] | format_number }}</li>
-    <li>Dark matter particle mass: {{ data.dark_matter.masses[0].to("Solar_Mass") | format_number }}</li>
-    <li>Gas particle mass: {{ data.gas.masses.min().to("Solar_Mass") | format_number }}</li>
+    <li>Dark matter particle mass:
+        {{ data.metadata.initial_mass_table.dark_matter.to("Solar_Mass") | format_number }}</li>
+    <li>Gas particle mass: {{ data.metadata.initial_mass_table.gas.to("Solar_Mass") | format_number }}</li>
     <li>Snapshot \(z={{ "%2.2f" | format(data.metadata.z)}}\), \(a={{ "%2.2f" | format(data.metadata.a)}}\)</li>
 </ul>
 
@@ -38,10 +39,14 @@
         <th>Comoving</th>
     </tr>
     <tr>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_baryon_softening", data.units.length, "kpc") }}</td>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_baryon_softening", data.units.length, "kpc") }}</td>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_DM_softening", data.units.length, "kpc") }}</td>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_DM_softening", data.units.length, "kpc") }}</td>
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_baryon_softening", data.units.length, "kpc") }}
+        </td>
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_baryon_softening", data.units.length, "kpc") }}
+        </td>
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_DM_softening", data.units.length, "kpc") }}
+        </td>
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_DM_softening", data.units.length, "kpc") }}
+        </td>
     </tr>
 </table>
 
@@ -51,4 +56,3 @@
     <li>Compiler info: {{ data.metadata.compiler_info }}</li>
     <li>Hydrodynamics: {{ data.metadata.hydro_info }}</li>
 </ul>
-
