--- a/eagle-xl/description.html
+++ b/eagle-xl/description.html
@@ -39,13 +39,17 @@
         <th>Comoving</th>
     </tr>
     <tr>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_baryon_softening", data.units.length, "kpc") }}
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_baryon_softening",
+            data.units.length, "kpc") }}
         </td>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_baryon_softening", data.units.length, "kpc") }}
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_baryon_softening", data.units.length,
+            "kpc") }}
         </td>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_DM_softening", data.units.length, "kpc") }}
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:max_physical_DM_softening", data.units.length,
+            "kpc") }}
         </td>
-        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_DM_softening", data.units.length, "kpc") }}
+        <td>{{ data.metadata.parameters | get_if_present_float("Gravity:comoving_DM_softening", data.units.length,
+            "kpc") }}
         </td>
     </tr>
 </table>
@@ -56,3 +60,40 @@
     <li>Compiler info: {{ data.metadata.compiler_info }}</li>
     <li>Hydrodynamics: {{ data.metadata.hydro_info }}</li>
 </ul>
+
+<h4>Calibration Parameters</h4>
+<table>
+    <tr>
+        <th>Parameter</th>
+        <th>Value</th>
+    </tr>
+    {% for name, key in zip([
+    "$f_{\\rm E, min}$",
+    "$f_{\\rm E, max}$",
+    "$f_{\\rm E, max, n}$",
+    "$\\log_{10}$ $n_{\\rm H, 0}$ / cm$^{3}$",
+    "$\\log_{10} \\Delta T_{\\rm SN}$",
+    "$\\sigma_{Z}$",
+    "$\\log_{10} \\sigma_{n}$",
+    "$\epsilon_{\\rm eff}$",
+    "$\\beta_{\\rm boost}$",
+    "$\\log_{10} \\Delta T_{\\rm AGN}$",
+    ],
+    [
+    "EAGLEFeedback:SNII_energy_fraction_min",
+    "EAGLEFeedback:SNII_energy_fraction_max",
+    "EAGLEFeedback:SNII_energy_fraction_delta_E_n",
+    "EAGLEFeedback:SNII_energy_fraction_n_0_H_p_cm3",
+    "EAGLEFeedback:SNII_delta_T_K",
+    "EAGLEFeedback:SNII_energy_fraction_sigma_Z",
+    "EAGLEFeedback:SNII_energy_fraction_sigma_n",
+    "EAGLEAGN:coupling_efficiency",
+    "EAGLEAGN:boost_beta",
+    "EAGLEAGN:AGN_delta_T_K",
+    ]) %}
+    <tr>
+        <td>{name}</td>
+        <td>{{ data.metadata.parameters | get_if_present_float(key) }}</td>
+    </tr>
+    {% endfor %}
+</table>
