--- a/eagle-xl/description.html
+++ b/eagle-xl/description.html
@@ -68,42 +68,42 @@
         <th>Value</th>
     <tr>
         <td>$f_{\rm E, min}$</td>
-        <td>{ data.metadata.parameters | get_if_present_float(key) }</td>
+        <td>{{ data.metadata.parameters | get_if_present_float(key) }}</td>
     </tr>
     <tr>
         <td>$f_{\rm E, max}$</td>
-        <td>{ data.metadata.parameters | get_if_present_float(key) }</td>
+        <td>{{ data.metadata.parameters | get_if_present_float(key) }}</td>
     </tr>
     <tr>
         <td>$f_{\rm E, max, n}$</td>
-        <td>{ data.metadata.parameters | get_if_present_float(key) }</td>
+        <td>{{ data.metadata.parameters | get_if_present_float(key) }}</td>
     </tr>
     <tr>
         <td>$\log_{10}$ $n_{\rm H, 0}$ / cm$^{3}$</td>
-        <td>{ data.metadata.parameters | get_if_present_float(key) }</td>
+        <td>{{ data.metadata.parameters | get_if_present_float(key) }}</td>
     </tr>
     <tr>
         <td>$\log_{10} \Delta T_{\rm SN}$</td>
-        <td>{ data.metadata.parameters | get_if_present_float(key) }</td>
+        <td>{{ data.metadata.parameters | get_if_present_float(key) }}</td>
     </tr>
     <tr>
         <td>$\sigma_{Z}$</td>
-        <td>{ data.metadata.parameters | get_if_present_float(key) }</td>
+        <td>{{ data.metadata.parameters | get_if_present_float(key) }}</td>
     </tr>
     <tr>
         <td>$\log_{10} \sigma_{n}$</td>
-        <td>{ data.metadata.parameters | get_if_present_float(key) }</td>
+        <td>{{ data.metadata.parameters | get_if_present_float(key) }}</td>
     </tr>
     <tr>
         <td>$\epsilon_{\rm eff}$</td>
-        <td>{ data.metadata.parameters | get_if_present_float(key) }</td>
+        <td>{{ data.metadata.parameters | get_if_present_float(key) }}</td>
     </tr>
     <tr>
         <td>$\beta_{\rm boost}$</td>
-        <td>{ data.metadata.parameters | get_if_present_float(key) }</td>
+        <td>{{ data.metadata.parameters | get_if_present_float(key) }}</td>
     </tr>
     <tr>
         <td>$\log_{10} \Delta T_{\rm AGN}$</td>
-        <td>{ data.metadata.parameters | get_if_present_float(key) }</td>
+        <td>{{ data.metadata.parameters | get_if_present_float(key) }}</td>
     </tr>
 </table>
