Removed incorrect log10s

--- a/eagle-xl/description.html
+++ b/eagle-xl/description.html
@@ -79,11 +79,11 @@
         <td>{{ data.metadata.parameters | get_if_present_float("EAGLEFeedback:SNII_energy_fraction_delta_E_n") }}</td>
     </tr>
     <tr>
-        <td>$\log_{10}$ $n_{\rm H, 0}$ / cm$^{3}$</td>
+        <td>$n_{\rm H, 0}$ / cm$^{3}$</td>
         <td>{{ data.metadata.parameters | get_if_present_float("EAGLEFeedback:SNII_energy_fraction_n_0_H_p_cm3") }}</td>
     </tr>
     <tr>
-        <td>$\log_{10} \Delta T_{\rm SN}$</td>
+        <td>$\Delta T_{\rm SN}$</td>
         <td>{{ data.metadata.parameters | get_if_present_float("EAGLEFeedback:SNII_delta_T_K") }}</td>
     </tr>
     <tr>
@@ -91,7 +91,7 @@
         <td>{{ data.metadata.parameters | get_if_present_float("EAGLEFeedback:SNII_energy_fraction_sigma_Z") }}</td>
     </tr>
     <tr>
-        <td>$\log_{10} \sigma_{n}$</td>
+        <td>$\sigma_{n}$</td>
         <td>{{ data.metadata.parameters | get_if_present_float("EAGLEFeedback:SNII_energy_fraction_sigma_n") }}</td>
     </tr>
     <tr>
@@ -103,7 +103,7 @@
         <td>{{ data.metadata.parameters | get_if_present_float("EAGLEAGN:boost_beta") }}</td>
     </tr>
     <tr>
-        <td>$\log_{10} \Delta T_{\rm AGN}$</td>
+        <td>$\Delta T_{\rm AGN}$</td>
         <td>{{ data.metadata.parameters | get_if_present_float("EAGLEAGN:AGN_delta_T_K") }}</td>
     </tr>
 </table>
